--- a/action-item-tool from wikihow test.ipynb
+++ b/action-item-tool from wikihow test.ipynb
@@ -2673,18 +2673,18 @@
     "#    [the] [... until noun(s)]\"\n",
     "# -> does not allow any punctuation inside the match \n",
     "pattern2 = [\n",
-    "    {\"LOWER\": \"use\"},\t\t\t\t\t\t\t\t\t\t\t#0\n",
-    "    {\"LOWER\": {\"IN\": [\"the\", \"a\", \"an\"]}},\t\t\t\t\t\t#1\n",
-    "    {\"IS_PUNCT\": False, \"POS\": {\"NOT_IN\": [\"VERB\"]}, \"OP\": \"*\"},\t\t\t\t\t\t\t\t#2\n",
-    "    {\"POS\": \"NOUN\", \"OP\": \"+\"},\t\t\t\t\t\t\t\t\t#3\n",
-    "    {\"IS_PUNCT\": False, \"POS\": {\"NOT_IN\": [\"VERB\"]}, \"OP\": \"*\"},\t\t\t\t\t\t\t\t#4\n",
-    "    {\"LOWER\": \"to\"},\t\t\t\t\t\t\t\t\t\t\t#5\n",
-    "    {\"IS_PUNCT\": False, \"POS\": {\"NOT_IN\": [\"NOUN\"]}, \"OP\": \"*\"},\t\t\t\t\t\t\t\t#6\n",
-    "    {\"POS\": \"VERB\", \"OP\": \"+\"},\t\t\t\t\t\t\t\t\t#7\n",
-    "    {\"IS_PUNCT\": False, \"POS\": {\"NOT_IN\": [\"NOUN\"]}, \"OP\": \"*\"},\t\t\t\t\t\t\t\t#8\n",
-    "    {\"LOWER\": {\"IN\": [\"the\", \"a\", \"an\"]}}, #, \"OP\": \"?\"},\t\t#9\n",
-    "    {\"IS_PUNCT\": False, \"POS\": {\"NOT_IN\": [\"VERB\"]}, \"OP\": \"*\"},\t\t\t\t\t\t\t\t#10\n",
-    "    {\"POS\": \"NOUN\", \"OP\": \"+\"},\t\t\t\t\t\t\t\t\t#11\n",
+    "    {\"LOWER\": \"use\"},\t\t\t\t\t\t\t\t\t\t\t\t\t#0\n",
+    "    {\"LOWER\": {\"IN\": [\"the\", \"a\", \"an\"]}},\t\t\t\t\t\t\t\t#1\n",
+    "    {\"IS_PUNCT\": False, \"POS\": {\"NOT_IN\": [\"VERB\"]}, \"OP\": \"*\"},\t\t#2\n",
+    "    {\"POS\": \"NOUN\", \"OP\": \"+\"},\t\t\t\t\t\t\t\t\t\t\t#3\n",
+    "    {\"IS_PUNCT\": False, \"POS\": {\"NOT_IN\": [\"VERB\"]}, \"OP\": \"*\"},\t\t#4\n",
+    "    {\"LOWER\": \"to\"},\t\t\t\t\t\t\t\t\t\t\t\t\t#5\n",
+    "    {\"IS_PUNCT\": False, \"POS\": {\"NOT_IN\": [\"NOUN\"]}, \"OP\": \"*\"},\t\t#6\n",
+    "    {\"POS\": \"VERB\", \"OP\": \"+\"},\t\t\t\t\t\t\t\t\t\t\t#7\n",
+    "    {\"IS_PUNCT\": False, \"POS\": {\"NOT_IN\": [\"NOUN\"]}, \"OP\": \"*\"},\t\t#8\n",
+    "    {\"LOWER\": {\"IN\": [\"the\", \"a\", \"an\"]}}, #, \"OP\": \"?\"},\t\t\t\t#9\n",
+    "    {\"IS_PUNCT\": False, \"POS\": {\"NOT_IN\": [\"VERB\"]}, \"OP\": \"*\"},\t\t#10\n",
+    "    {\"POS\": \"NOUN\", \"OP\": \"+\"},\t\t\t\t\t\t\t\t\t\t\t#11\n",
     "]\n",
     "\n",
     "matcher.add(\"use\", [pattern2])"
